# Octarine

./: .gitignore  .gitmodules  Allocators_8h.html  Allocators_8h.js  Allocators_8h__dep__incl.map  Allocators_8h__dep__incl.md5  Allocators_8h__incl.map  Allocators_8h__incl.md5  Allocators_8h_source.html  AssetBundle_8md.html  Assets_8h.html  Assets_8h.js  Assets_8h__dep__incl.map  Assets_8h__dep__incl.md5  Assets_8h__incl.map  Assets_8h__incl.md5  Assets_8h_source.html  Audio_8h.html  Audio_8h.js  Audio_8h__dep__incl.map  Audio_8h__dep__incl.md5  Audio_8h__incl.map  Audio_8h__incl.md5  Audio_8h_source.html  CMakeLists.txt  Common_8h.html  Common_8h.js  Common_8h__dep__incl.map  Common_8h__dep__incl.md5  Common_8h__incl.map  Common_8h__incl.md5  Common_8h_source.html  Constants_8h.html  Constants_8h.js  Constants_8h__dep__incl.map  Constants_8h__dep__incl.md5  Constants_8h__incl.map  Constants_8h__incl.md5  Constants_8h_source.html  Core_8h.html  (+239 more)
.github/workflows/: doxygen.yaml
OctarineEngine/: CMakeLists.txt
OctarineEngine/include/ext/: minivorbis.h
OctarineEngine/include/oct/: Allocators.h  Assets.h  Audio.h  Blobs.h  CommandBuffer.h  Common.h  Constants.h  Core.h  Drawing.h  InputHandler.h  JobSystem.h  LogicThread.h  LogicalThread.h  Octarine.h  Opaque.h  SDLConstants.h  Subsystems.h  Tilemap.h  Util.h  Validation.h  Window.h  stb_vorbis.h
OctarineEngine/src/: Allocators.c  AssetBundle.c  Assets.c  Audio.c  CommandBuffer.c  Constants.c  Core.c  Drawing.c  DrawingShorthands.c  Fonts.c  InputHandler.c  JobSystem.c  LogicThread.c  LogicalThread.c  SingleHeaderCompiles.c  Tilemap.c  Util.c  Validation.c  Window.c  cJSON.c
data/: manifest.json  shader.slang
data/sprites/: paladin.json
docs/: AssetBundle.md  Doxyfile  ImportingSprites.md  header.html
include/: Game.h
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  (+25 more)
src/: Game.c
